--- a/findEmoSadness.html
+++ b/findEmoSadness.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-f3e21832.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-8b2778b9.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-3a7e9866.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-a717b611.css">
   </head>
   <body>
-    <header class="header h-logined fixed-top">
+    <div class="" id="top"></div>
+    <header class="header h-logined mb-12">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
             <a href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
@@ -23,14 +24,14 @@
             <button class="px-8 py-4 btn btn-outline-main rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 <i class="bi bi-list"></i>
             </button>
-            <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
+            <div class="collapse" style="position: absolute; right: 0; top: 40px; z-index: 10000;" id="collapseExample">
                 <div class="p-0 card card-body rounded-2 border-2 border-main-tint01" style="width: 160px;">
                     <ul>
                         <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
                         </li>
                         <li>
-                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">找尋我的情緒</a>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">探索情緒</a>
                         </li>
                         <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="myRecords.html">我的紀錄</a>
@@ -53,7 +54,7 @@
                 <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇與紀錄我的情緒">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇情緒卡與紀錄情緒">探索情緒</a>
             </li>
             <li class="ms-16">
                 <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
@@ -78,29 +79,33 @@
 </header>
 
     <main>
-        <div class="container py-16 pt-72" id="top">
-            <!-- title bar -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>低落</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">返回</a>
-                    <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
-                        <i class="bi bi-folder2"></i>
-                        <i class="bi bi-folder2-open"></i>
-                        <span class="ms-4">我的情緒卡夾</span>
-                    </a>
+        <!-- title bar -->
+        <div class="sticky-top pb-8 bg-white">
+            <div class="container pt-16">
+                <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                    <h2 class="fs-3">低落</h2>
+                    <div class="nav-btn d-flex justify-content-end">
+                        <a class="btn btn-outline-main c-btn" href="findEmoClassifiedExpand.html">返回</a>
+                        <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
+                            <i class="bi bi-folder2"></i>
+                            <i class="bi bi-folder2-open"></i>
+                            <span class="ms-4">我的情緒卡夾</span>
+                        </a>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <p class="mb-44 text-gray-550">
-                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡夾」中。
+        <div class="container">
+            <p class="mt-16 mb-48 px-12 px-sm-0 text-gray-550">
+                🔎 點擊卡片，可閱讀該情緒的詳細內容。
             </p>
-
+    
             <!-- cards -->
-            <div class="d-flex flex-wrap mb-72">
+            <div class="mb-72 d-flex flex-wrap justify-content-center justify-content-md-start">
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness01">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness01">
                         <p>無&nbsp;奈</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness01-helpless.svg" alt="無奈">
@@ -109,7 +114,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness02">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness02">
                         <p>挫&nbsp;折</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness02-setback.svg" alt="挫折">
@@ -118,7 +123,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness03">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness03">
                         <p>失&nbsp;望</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness03-disappointed.svg" alt="失望">
@@ -127,7 +132,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness04">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness04">
                         <p>無&nbsp;力</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness04-powerless.svg" alt="無力">
@@ -136,7 +141,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness05">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness05">
                         <p>沮&nbsp;喪</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness05-frustrated.svg" alt="沮喪">
@@ -145,7 +150,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness06">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness06">
                         <p>難&nbsp;過</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness06-sad.svg" alt="難過">
@@ -154,7 +159,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness07">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness07">
                         <p>無&nbsp;助</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness07-powerless.svg" alt="無助">
@@ -163,7 +168,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness08">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness08">
                         <p>悲&nbsp;傷</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness08-sorrow.svg" alt="悲傷">
@@ -172,7 +177,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness09">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness09">
                         <p>心&nbsp;痛</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness09-heartache.svg" alt="心痛">
@@ -181,7 +186,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness10">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness10">
                         <p>憂&nbsp;鬱</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness10-depressed.svg" alt="憂鬱">
@@ -190,7 +195,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness11">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness11">
                         <p>崩&nbsp;潰</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness11-collapse.svg" alt="崩潰">
@@ -199,7 +204,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness12">
+                    <button type="button" class="class-card mb-36 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#addSadness12">
                         <p>絕&nbsp;望</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness12-despair.svg" alt="絕望">
@@ -211,17 +216,11 @@
     </main>
 
     <!-- 浮動按鈕 -->
-<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
-        <a href="myEmoCardsHolder.html" type="button" class="mb-8 btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center link-white"
-        style="width: 60px; height: 60px;">
-                <i class="bi bi-folder-fill"></i>
-                <span class="fs-10 fw-bold">卡夾</span>
-        </a>
-        <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-        style="width: 60px; height: 60px;">
-                <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-                <span class="text-white fs-10 fw-bold">TOP</span>
-        </a>
+<div class="me-12 mb-12 floatButton">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center">
+        <img class="d-none d-md-block" src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+        <span class="text-white fs-9 fs-md-10 fw-bold">TOP</span>
+    </a>
 </div>    
     <footer class="footer py-48">
     <div class="container">
