--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>浪潮情緒卡｜找尋我的情緒</title>
+    <title>浪潮情緒卡｜探索情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-f3e21832.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-8b2778b9.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-3a7e9866.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-a717b611.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -30,7 +30,7 @@
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
                         </li>
                         <li>
-                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">找尋我的情緒</a>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">探索情緒</a>
                         </li>
                         <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="myRecords.html">我的紀錄</a>
@@ -53,7 +53,7 @@
                 <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇與紀錄我的情緒">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇情緒卡與紀錄情緒">探索情緒</a>
             </li>
             <li class="ms-16">
                 <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
@@ -77,41 +77,52 @@
     </div>
 </header>
 
-    <main class="box-findEmo-main">
+    <main>
       <div class="container py-16 mb-48 pt-112" id="top">
           <!-- 標題欄 -->
           <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between">
-            <h2 class="fs-3">找尋我的情緒</h2>
+            <h2 class="fs-3">探索情緒</h2>
           </div>
   
-          <div class="row justify-content-between align-items-center">
+          <div class="row align-items-center">
             <!-- 導覽說明 -->
-            <div class="col-md-6 mb-24 mb-md-0">
-              <div class="h-100 px-20 py-16 rounded-3 bg-main-tint03 fs-7 text-gray-700">
-                <p class="mb-md-12 fs-8">你在情緒的世界裡迷航了嗎？</p>
-                <p class="mb-md-12 fs-8">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
-                <p class="mb-md-12 fs-8">邀請你先閉上眼睛，<span class="text-main fw-bold">深呼吸</span>，再慢慢地吐氣。</p>
-                <p class="mb-md-12 fs-8">在吸氣與吐氣的過程，<span class="text-main fw-bold">慢慢地感受自己的身體與心靈的狀態</span>。</p>
-                <p class="fs-8">如果準備好了的話，<span class="text-main fw-bold">請點擊「開始探索」</span>，開始探索情緒浪潮吧！</p>
+            <div class="col-md-8 mb-24 mb-md-0">
+              <div class="h-100 px-36 py-24 bg-main-tint03 rounded-4 fs-6 text-gray-700 d-flex flex-column justify-content-center">
+                <p class="mb-md-12">你在情緒的世界裡迷航了嗎？</p>
+                <p class="mb-md-12">沒關係，讓我們一起在浪潮情緒卡中，探索自己的情緒。</p>
+                <p class="mb-md-12">邀請你先閉上眼睛，<span class="text-main fw-bold">深呼吸</span>，再慢慢地吐氣。</p>
+                <p class="mb-md-12">在吸氣與吐氣的過程，<span class="text-main fw-bold">慢慢地感受自己的身體與心靈的狀態</span>。</p>
+                <p>如果準備好了的話，<span class="text-main fw-bold">請點擊「開始探索」</span>。</p>
               </div>
             </div>
+            
             <!-- 分類探索 -->
-            <div class="col-md-6 d-flex flex-column align-items-center">
-              <a class="d-block mt-8 mb-4 px-56 py-40 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
+            <div class="d-md-none mt-md-24 d-flex justify-content-center">
+              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill text-nowrap" href="findEmoClassifiedExpand.html">
                 開始探索
               </a>
+            </div>
+            <div class="col-md-4 pt-36 d-flex flex-column align-items-center">
+              <!-- <a class="d-block mt-8 mb-4 px-56 py-40 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassifiedExpand.html">
+                開始探索
+              </a> -->
               <!-- <a class="mt-8 w-75 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
                 <h2 class="w-50 me-36 text-nowrap text-center text-main fs-2">開始探索</h2>
                 <div style="width: 50%;">
                   <img src="../assets/images/findEmoClassified.svg" alt="分類探索">
                 </div>
               </a> -->
+              <img src="/wavemocards/assets/lime-Breath-dcb00c3f.svg" alt="breath">
               <!-- 圖片引用來源 -->
               <span class="text-gray-500 fs-11">
                 Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
               </span>
             </div>
-            
+            <div class="d-none d-md-block mt-24 d-flex justify-content-center">
+              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill" href="findEmoClassifiedExpand.html">
+                開始探索
+              </a>
+            </div>
           </div>
         </div>
       </div>
