--- a/myRecordsAnalyze.html
+++ b/myRecordsAnalyze.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-f3e21832.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-8b2778b9.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-3a7e9866.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-a717b611.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -30,7 +30,7 @@
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
                         </li>
                         <li>
-                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">找尋我的情緒</a>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">探索情緒</a>
                         </li>
                         <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="myRecords.html">我的紀錄</a>
@@ -53,7 +53,7 @@
                 <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇與紀錄我的情緒">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇情緒卡與紀錄情緒">探索情緒</a>
             </li>
             <li class="ms-16">
                 <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
@@ -77,15 +77,16 @@
     </div>
 </header>
     <main>
-        <div class="container py-16 pt-72" id="top">
+        <div class="container py-16 pt-112" id="top">
             <!-- 標題 -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>我的紀錄｜分析</h2>
+            <div class="mb-20 pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                <h2 class="fs-3">我的紀錄｜分析</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="myRecords.html">紀錄</a>
-                    <div class="ms-16 btn-disable">分析</div>
+                    <div class="ms-16 btn-disable text-nowrap">分析</div>
                 </div>
             </div>
+            
             
             <!-- 搜尋條 & 分享 -->
             <div class="mb-24 d-flex justify-content-between align-items-center">
