Added RWD at account page

--- a/pages/myRecordsEmoStory.html
+++ b/pages/myRecordsEmoStory.html
@@ -206,6 +206,7 @@
         <%- include('./layout/footer'); -%>
 
         <%- include('./layout/baseJs'); -%>
+        <script type="text/javascript" src="../assets/js/beforeunload.js"></script>
         <script>
             const btnModify = document.querySelector('#btnModify');
             const btnCancel = document.querySelector('#btnCancel');
