--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -78,7 +78,7 @@
 </header>
 
     <main>
-      <div class="container py-16 mb-48 pt-112" id="top">
+      <div class="container py-16 pt-112" id="top">
           <!-- 標題欄 -->
           <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between">
             <h2 class="fs-3">探索情緒</h2>
@@ -113,16 +113,17 @@
                 </div>
               </a> -->
               <img src="/wavemocards/assets/lime-Breath-dcb00c3f.svg" alt="breath">
-              <!-- 圖片引用來源 -->
-              <span class="text-gray-500 fs-11">
-                Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
-              </span>
+              
             </div>
-            <div class="d-none d-md-block mt-24 d-flex justify-content-center">
+            <div class="d-none d-md-flex mt-24 justify-content-center">
               <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill" href="findEmoClassifiedExpand.html">
                 開始探索
               </a>
             </div>
+          </div>
+          <!-- 圖片引用來源 -->
+          <div class="mt-4 mb-72 mt-md-72 mb-md-8 d-flex justify-content-center text-gray-500 fs-11">
+            Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
           </div>
         </div>
       </div>
