--- a/myRecordsEmoStory.html
+++ b/myRecordsEmoStory.html
@@ -345,7 +345,8 @@
 <script src="../assets/js/toolTips.js"></script>
 
 <!-- axios -->
-<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>        <script>
+<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>        <script type="text/javascript" src="../assets/js/beforeunload.js"></script>
+        <script>
             const btnModify = document.querySelector('#btnModify');
             const btnCancel = document.querySelector('#btnCancel');
             const btnSave = document.querySelector('#btnSave');
