--- a/pages/emoCardsRelived.html
+++ b/pages/emoCardsRelived.html
@@ -38,49 +38,57 @@
 
     <%- include('./layout/baseJs'); -%>
     <script>
-      let imgRelived01 = "https://wavemocards.com/frontend/upload/03-relived/relived01-comfortable.svg";
-      let imgRelived02 = "https://wavemocards.com/frontend/upload/03-relived/relived02-relax.svg";
-      let imgRelived03 = "https://wavemocards.com/frontend/upload/03-relived/relived03-calm.svg";
-      let imgRelived04 = "https://wavemocards.com/frontend/upload/03-relived/relived04-relieved.svg";
-      let imgRelived05 = "https://wavemocards.com/frontend/upload/03-relived/relived05-ease.svg";
-      let imgRelived06 = "https://wavemocards.com/frontend/upload/03-relived/relived06-trust.svg";
+      // let imgRelived01 = "https://wavemocards.com/frontend/upload/03-relived/relived01-comfortable.svg";
+      // let imgRelived02 = "https://wavemocards.com/frontend/upload/03-relived/relived02-relax.svg";
+      // let imgRelived03 = "https://wavemocards.com/frontend/upload/03-relived/relived03-calm.svg";
+      // let imgRelived04 = "https://wavemocards.com/frontend/upload/03-relived/relived04-relieved.svg";
+      // let imgRelived05 = "https://wavemocards.com/frontend/upload/03-relived/relived05-ease.svg";
+      // let imgRelived06 = "https://wavemocards.com/frontend/upload/03-relived/relived06-trust.svg";
 
       const relivedCards = document.querySelector('#relivedCards');
       const listModal = document.querySelector('.list');
 
-      axios.get("http://api.wavemocards.com/emotions?requirement=cards")
+      axios.get("http://api2.wavemocards.com/emotions?require=cards")
       .then(function(response){
-        let aryData = Object.values(response.data);
+        let aryData = Object.values(response.data); // 轉成「陣列」
+        let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
+
+        for(let i=0; i<aryData.length; i++){
+          aryData[i].id= aryIds[i];
+        }
+
+        // 展開卡
         initCards()
         function initCards() {
-          let strCards = "";
+            let strCardsRelived = "";
+            let emo;
+            aryData.forEach(function(data, i){
+              if(data.Category == "安心"){
+                  emo = "relived";
+                  let contentCards = `
+                  <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                      <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+                      <div class="img-box">
+                      <img src="./upload/${data.id}.svg" alt="${data.Name}">
+                      </div>
+                  </button>`;
+                  strCardsRelived+=contentCards;
+              }
+            })
+            relivedCards.innerHTML = strCardsRelived;
+        }
+
+        // 大情緒卡 Modal
+        initModal();
+        function initModal() {
           let strModal = "";
           let emo;
           aryData.forEach(function(data, i){
-            let imgSrc;
-            if(data.Category == "安心"){
-              emo = "relived";
-              if(data.Name == "舒服") {
-                imgSrc = imgRelived01;
-              } else if (data.Name == "放鬆") {
-                imgSrc = imgRelived02;
-              } else if (data.Name == "平靜") {
-                imgSrc = imgRelived03;
-              } else if (data.Name == "安心") {
-                imgSrc = imgRelived04;
-              } else if (data.Name == "自在") {
-                imgSrc = imgRelived05;
-              } else if (data.Name == "信任") {
-                imgSrc = imgRelived06;
+              if (data.Category == "安心") {
+                emo = "relived";
               }
-              let contentCards = `
-                <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                  <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-                  <div class="img-box">
-                    <img src="${imgSrc}}" alt="${data.Name}">
-                  </div>
-                </button>`;
-              let contentModals = `
+              
+              let content = `
                 <li>
                   <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
@@ -89,7 +97,7 @@
                           <div class="box-bigCard-text">
                             <div class="d-flex d-md-none w-100 justify-content-center">
                               <div class="d-sm-none box-bigCard-img mb-8">
-                                <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                                <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
                               </div>
                             </div>
                             <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
@@ -108,21 +116,92 @@
                             </div>
                           </div>
                           <div class="d-none d-sm-block box-bigCard-img">
-                            <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                            <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </li>`;
-              strCards+=contentCards;
-              strModal+=contentModals;
-            }
+              strModal+=content;
           })
-          relivedCards.innerHTML = strCards;
           listModal.innerHTML = strModal;
         }
+
       })
+
+      // let aryData = Object.values(response.data);
+      // initCards()
+      // function initCards() {
+      //   let strCards = "";
+      //   let strModal = "";
+      //   let emo;
+      //   aryData.forEach(function(data, i){
+      //     let imgSrc;
+      //     if(data.Category == "安心"){
+      //       emo = "relived";
+      //       if(data.Name == "舒服") {
+      //         imgSrc = imgRelived01;
+      //       } else if (data.Name == "放鬆") {
+      //         imgSrc = imgRelived02;
+      //       } else if (data.Name == "平靜") {
+      //         imgSrc = imgRelived03;
+      //       } else if (data.Name == "安心") {
+      //         imgSrc = imgRelived04;
+      //       } else if (data.Name == "自在") {
+      //         imgSrc = imgRelived05;
+      //       } else if (data.Name == "信任") {
+      //         imgSrc = imgRelived06;
+      //       }
+      //       let contentCards = `
+      //         <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+      //           <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+      //           <div class="img-box">
+      //             <img src="${imgSrc}}" alt="${data.Name}">
+      //           </div>
+      //         </button>`;
+      //       let contentModals = `
+      //         <li>
+      //           <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      //             <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+      //               <div class="modal-content bg-${emo}">
+      //                 <div class="modal-body d-sm-flex justify-content-between align-items-center">
+      //                   <div class="box-bigCard-text">
+      //                     <div class="d-flex d-md-none w-100 justify-content-center">
+      //                       <div class="d-sm-none box-bigCard-img mb-8">
+      //                         <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+      //                       </div>
+      //                     </div>
+      //                     <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+      //                       <h2>${data.Name}</h2>
+      //                       <!-- <a href="modifyEmoCard.html" role="button">
+      //                           <i class="bi bi-pencil-square"></i>
+      //                       </a> -->
+      //                     </div>
+      //                     <div class="mb-16">
+      //                       <h3 class="mb-4">意思：</h3>
+      //                       <p>${data.Description}</p>
+      //                     </div>
+      //                     <div>
+      //                       <h3 class="mb-4">例句：</h3>
+      //                       <p>${data.Example}</p>
+      //                     </div>
+      //                   </div>
+      //                   <div class="d-none d-sm-block box-bigCard-img">
+      //                     <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+      //                   </div>
+      //                 </div>
+      //               </div>
+      //             </div>
+      //           </div>
+      //         </li>`;
+      //       strCards+=contentCards;
+      //       strModal+=contentModals;
+      //     }
+      //   })
+      //   relivedCards.innerHTML = strCards;
+      //   listModal.innerHTML = strModal;
+      // }
     </script>
   </body>
 </html>
